--- a/public/css/woo-kyber-payment-public.css
+++ b/public/css/woo-kyber-payment-public.css
@@ -2,3 +2,10 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+
+ .kyber-icon {
+    float: right;
+    max-width: 40px;
+    padding-left: 3px;
+    margin: 0;
+ }
